# LearnOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml
HelloModel/: CMakeLists.txt
HelloModel/shader/: common_model.vert
HelloModel/src/: model.cpp  model.h  shader.cpp  shader.h  testure.cpp  testure.h  world.cpp  world.h
HelloModel/test/test01/: main.cpp
HelloTriangle/: CMakeLists.txt
HelloVulkan/: CMakeLists.txt
HelloVulkan/src/: main.cpp
HelloWorld/: CMakeLists.txt
HelloWorld/camera/: camera.cpp  camera.h
HelloWorld/shader/: camera.frag  common.frag  common.vert  commonwithtexture.frag  commonwithtexture.vert  object.frag
HelloWorld/src/: camera.h  object.cpp  object.h  shader.cpp  shader.h  texture.cpp  texture.h  world.cpp  world.h
HelloWorld/test/: main.cpp
HelloWorld/test/BasicFrameWork/: main.cpp
chapter1/: CMakeLists.txt
chapter1/include/: camera.cpp  camera.h  renderable_object.cpp  renderable_object.h  shader.cpp  shader.h  texture.cpp  texture.h
chapter1/shader/: 05shader_fragment.glsl  06shader_vertex.glsl  06task1_shader_vertex.glsl  06task2_shader_vertex.glsl  06task3_shader_fragment.glsl  06task3_shader_vertex.glsl  07shader_vertex.glsl  07task0_shader_fragment.glsl  07task1_shader_fragment.glsl  07task2_shader_fragment.glsl  07task5_shader_fragment.glsl  08shader_fragment.glsl  09task0_shader_fragment.glsl  09task0_shader_vertex.glsl
chapter1/src/: 00BasicOpenGL.cpp  01InputAndResize.cpp  02HelloTriangle.cpp  02task1.cpp  02task2.cpp  02task3.cpp  03ShadersInFile.cpp  04PassValueToShader.cpp  05PassValueToLocation.cpp  06SetupShaderClass.cpp  06task1.cpp  06task2.cpp  06task3.cpp  07SetUpTextureClass.cpp  07SetupTextureClass.cpp  07task0.cpp  07task1.cpp  07task2.cpp  07task3.cpp  07task4.cpp  07task5.cpp  08SetupARenderObject.cpp  09IntroduceMVP.cpp  09task0.cpp  09task1.cpp  09task2.cpp  10Enter3D.cpp  11MoreCubes.cpp  11task1.cpp  12SetupCameraClass.cpp  12task1.cpp  HelloWindow.cpp
chapter2/: CMakeLists.txt
chapter2/include/: object.h  renderable_object.cpp  renderable_object.h  shader.cpp  texture.cpp
chapter2/shader/: 01task2_shader_fragment.glsl  03task1shader_fragment.glsl  03task2shader_fragment.glsl  04shader_fragment.glsl  05shader_fragment.glsl  07light_shader_fragment.glsl  07shader_fragment.glsl
chapter2/src/: 00BasicLight.cpp  01PhongLightingModel.cpp  01task1.cpp  01task2.cpp  01task3.cpp  02AddMaterial.cpp  02task01.cpp  03LightingMaps.cpp  03LightingMaps_2.cpp  03task01.cpp  03task02.cpp  03task03.cpp  04DirectionLight.cpp  05AttenuationLight.cpp  06FlashLight.cpp  07MultipleLights.cpp  07task01desert.cpp
chapter3/: CMakeLists.txt
chapter3/include/: camera.cpp  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  texture.h
chapter3/src/: 01AddModel.cpp
chapter4/: CMakeLists.txt
chapter4/include/: renderable_object.cpp  renderable_object.h  shader.cpp  shader.h  texture.cpp
chapter4/shader/: 01shader_vertex.glsl  02shader_fragment.glsl  04shader_fragment.glsl  05shader_fragment.glsl  05shader_vertex.glsl
chapter4/src/: 01DepthTest.cpp  02VisualizationOfDepthBuffer.cpp  03ObjectOutlining.cpp  04Blending.cpp  05RenderTranslucentTexture.cpp  06FaceCulling.cpp
cmake/: FindMY_ASSIMP.cmake  FindMY_GLAD.cmake  FindMY_GLFW.cmake  FindMY_GLM.cmake  FindMY_VULKAN.cmake
